@@ -38,15 +38,57 @@
                 </div>
             </div>
             <div class="row">
-                <a href="/residential" class="button col-md-3 col-10">Learn More</a>
                 <a href="http://shop.ekhocomm.com/" class="button col-md-3 col-10">Shop Now</a>
+            </div>
+            <div class="row">
+                <div class="arrow-wrapper col-md-12">
+                    <img src="/img/arrow-alt-circle-down.svg" alt="" class="arrow-down img-fluid">
+                </div>
             </div>
         </div>
     </header>
     <div class="container-fluid services">
         <div class="row">
-            <div class="service col-md-3 offset-md-2 col-10"></div>
-            <div class="service col-md-3 offset-md-2 col-10"></div>
+            <div class="service left col-md-3 offset-md-2 col-10">
+                <div class="service-title">
+                    <h3>Commercial</h3>
+                </div>
+                <div class="service-item">
+                    <img src="/img/home.svg" alt="">
+                    <h4>Home</h4>
+                </div>
+                <div class="service-item">
+                    <img src="/img/car.svg" alt="">
+                    <h4>Auto</h4>
+                </div>
+                <div class="service-item">
+                    <img src="/img/gas-pump.svg" alt="">
+                    <h4>RV</h4>
+                </div>
+                <div class="service-link">
+                    <a href="/residential">Learn More</a>
+                </div>
+            </div>
+            <div class="service right col-md-3 offset-md-2 col-10">
+                <div class="service-title">
+                    <h3>Enterprise</h3>
+                </div>
+                <div class="service-item">
+                    <img src="/img/building.svg" alt="">
+                    <h4>Office</h4>
+                </div>
+                <div class="service-item">
+                    <img src="/img/school.svg" alt="">
+                    <h4>School</h4>
+                </div>
+                <div class="service-item">
+                    <img src="/img/hospital.svg" alt="">
+                    <h4>Hospital</h4>
+                </div>
+                <div class="service-link">
+                    <a href="/enterprise">Learn More</a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -57,6 +99,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
+    <script src="js/landing.js" type="text/javascript"></script>
 </body>
 
 </html>
